# GhostifyDPI

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/process/: launch_stages.rs  launcher.rs  mod.rs  process_status.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/ui/frontend/: api.rs  events.rs  mod.rs
src-tauri/src/ui/os/: event_handlers.rs  icons.rs  mod.rs  tray.rs
src-tauri/src/util/: compile_time_util.rs  console_command.rs  logger.rs  mod.rs  runtime_util.rs  shared_util.rs
src-tauri/windows/: manifest.xml
src-tauri/windows/fragments/: copy.wxs
src/components/: ActivateButton.less  ActivateButton.tsx  App.less  App.tsx  Link.tsx  StatusMessage.less  StatusMessage.tsx
src/process/: LaunchStages.tsx  ProcessStatus.tsx
