[package]
name = "ghostifydpi"
version = "0.1.0"
description = "Ghostify DPI"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(runtime)'] }

[build-dependencies]
tauri-build = { version = "= 2.0.5", features = [] }
copy_to_output = "= 2.2.0"
resvg = "= 0.44.0"
image = "0.25.5"

[dependencies]
tauri = { version = "= 2.2.5", features = ["tray-icon", "image-png"] }
serde = { version = "= 1.0", features = ["derive"] }
serde_json = "= 1.0.138"
ctrlc = "= 3.4.5"
bitness = "= 0.4.0"
portable-pty = "= 0.8.1"
strum = { version = "= 0.26.3", features = ["derive"] }
futures-lite = "= 2.6.0"
blocking = "= 1.6.1"
async-channel = "= 2.3.1"
async-std = "= 1.13.0"
include_dir = "= 0.7.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "= 2.2.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "= 2.2.1"
